--- a/templates/player.html
+++ b/templates/player.html
@@ -1,9 +1,34 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <title>player</title>
+  <link href="/static/css/video-js.min.css" rel="stylesheet">
+  <link href="/static/css/videojs-seek-buttons.css" rel="stylesheet">
+</head>
+
 <html>
   <h1> {{ video_name }} </h1>
   <video
-    src="../video/{{ video_name }}"
+    id="my-player"
+    class="video-js"
     controls
+    preload="auto"
+    data-setup='{}'
+    src="../video/{{ video_name }}"
+    width="800"
+    height="600"
     >
   </video>
+
+  <script src="/static/js/video.min.js"></script>
+  <script src="/static/js/videojs-seek-buttons.js"></script>
+
+  <script>
+    var player = videojs('my-player');
+
+    player.seekButtons({
+      forward: 10,
+      back: 10
+    });
+  </script>
 </html>
